# MJLab-Experiments

./: .gitignore  README.md  environment.yml  play.py  pyproject.toml  setup.py  train.py
experiments/robots/crawler/: actuators.py  collisions.py  config.py  constants.py  sensors.py
experiments/robots/crawler/assets/: crawler.urdf  crawler.xml
experiments/robots/crawler/assets/meshes/: femur.stl  foot.stl  tibia.stl
experiments/tasks/: __init__.py
experiments/tasks/crawler/velocity/: __init__.py  algorithms.py  cact.py  events.py  observations.py  rewards.py  task.py  terrains.py
experiments/utils/: video_logger.py  video_runner.py
src/: train.py
src/crawler_velocity/: __init__.py  debug_config.py  env_cfgs.py  rl_cfg.py
src/crawler_velocity/crawler/: config.py
src/crawler_velocity/crawler/assets/: crawler.xml
src/crawler_velocity/crawler/assets/meshes/: base.stl  coxa.stl
src/experiments/robots/crawler/: actuators.py  config.py  constants.py  sensors.py
src/experiments/scripts/: train.py
src/experiments/tasks/: __init__.py
src/experiments/tasks/crawler/velocity/: __init__.py  algorithms.py  cact.py  events.py  observations.py  rewards.py  task.py  terrains.py
src/mjlab_quadruped/: __init__.py
src/mjlab_quadruped/robots/: .kscale.urdf_to_mjcf .py  urdf_to_mjcf.py
src/mjlab_quadruped/robots/simple_crawler/: simple_crawler_constants.py
src/mjlab_quadruped/robots/simple_crawler/assets/: actuator_metadata.json  joint_metadata.json  metadata.json  (+3 more)
src/mjlab_quadruped/scripts/: list_envs.py
src/mjlab_quadruped/tasks/: registry.py
(+1 files in other folders)
